--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <input data-cell-id="sztuki-we-wozku-koniec" data-cell-type="int" id="sztuki-2" class="flex-half" type="number" value="" />
             </div>
 
-            <div class="flex-row data-row">Spływ narastająco</div>
+            <button data-expandable="breakdown-wizard" class="data-row">Dodaj awarię</button>
             <div class="flex-row flex-auto-gap">
                 <input disabled data-cell-id="splyw-narastajaco-polowa" data-cell-type="int" id="nar-1" class="flex-half" type="number" value="" />
                 <input disabled data-cell-id="splyw-narastajaco-koniec" data-cell-type="int" id="nar-2" class="flex-half" type="number" value="" />
