service worker es modules + service worker now uses es modules instead of global objects + fixed bug that caused app to report an available update when offline

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             if (typeof navigator.serviceWorker !== 'undefined') {
                 navigator.serviceWorker.register(
                     '/tablica-odlewnia/sw.js',
-                    { scope: '/tablica-odlewnia/' }
+                    { scope: '/tablica-odlewnia/', type: 'module' }
                 );
             }
         })();
