--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <!-- app js -->
     <script>var DEBUG = false;</script>
-    <script type="module" src="/tablica-odlewnia/components/TablicaApp.js"></script>
+    <script type="module" src="/tablica-odlewnia/components/TablicaApp3.js"></script>
 </head>
 
 <body>
-    <tablica-app></tablica-app>
+    <tablica-app-3></tablica-app-3>
 
     <!-- pwa web worker -->
     <script>
